[package]
name = "ptdb"
version = "0.1.0"
authors = ["Aaron Boodman <aaron@aaronboodman.com>"]
edition = "2018"

[dependencies]
base32 = "0.4.0"
wasm-bindgen = "0.2"
wee_alloc = "0.4.5"
sha2 = "0.8.1"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'
