[package]
name = "ptdb"
version = "0.1.0"
authors = ["Aaron Boodman <aaron@aaronboodman.com>"]
edition = "2018"

[dependencies]
data-encoding = "1.1.1"
jammdb = "0.3.0"
sha2 = "0.8.1"
wasm-bindgen = "0.2"
wee_alloc = "0.4.5"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'
